T-36 docker:  setup docker, dockerfile and docker-compose
- Rearranged project structure, moving backend and backoffice into dedicated directories.
- Updated `package.json` and TypeScript imports with new paths.
- Introduced separate Dockerfiles for backend and backoffice.
- Added `docker-compose.yml` for multi-service orchestration.
- Adjusted database schemas, environment variables (`APP_DB_URL`, `BACKOFFICE_DB_URL`), and Prisma configurations.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cashou",
-  "module": "index.ts",
+  "module": "../index.ts",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run index.ts",
-    "start": "bun run index.ts",
+    "dev": "bun run ../index.ts",
+    "start": "bun run ../index.ts",
     "generate": "bunx prisma generate",
     "migrate": "bunx prisma migrate dev",
     "migrate:deploy": "bunx prisma migrate deploy",
