Refactor backend and backoffice configurations
- Updated backend `package.json` to use the correct module path and adjusted scripts for development and start commands.
- Modified backoffice `Dockerfile` to run the application using the start command instead of preview.
- Enhanced backoffice `index.ts` to implement a basic server with health check and response handling.
- Revised backoffice `package.json` scripts for improved build and development processes.

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,11 @@
 {
   "name": "cashou",
-  "module": "../index.ts",
+  "module": "src/index.ts",
   "type": "module",
   "private": true,
   "scripts": {
-    "dev": "bun run ../index.ts",
-    "start": "bun run ../index.ts",
+    "dev": "bun --watch src/index.ts",
+    "start": "bun run src/index.ts",
     "generate": "bunx prisma generate",
     "migrate": "bunx prisma migrate dev",
     "migrate:deploy": "bunx prisma migrate deploy",
