Add initial project structure and configuration files
- Introduced `.cursorrules` to define coding standards and best practices for the Cashou project.
- Created `ARCHITECTURE.md` to outline the technical architecture and stack of the application.
- Added `context7.json` for Context7 MCP server configuration.
- Established `docker-compose.yml` for service orchestration with PostgreSQL databases.
- Initialized `package.json` for the monorepo setup with workspaces for backend and backoffice.
- Enhanced `.gitignore` to include relevant files for Bun, Prisma, and Docker.
- Implemented `db-check.ts` script for database connection verification and status reporting.
- Updated backend `package.json` to include necessary scripts and dependencies.
- Added `bun.lock` for dependency management in the Bun environment.
- Created initial `mcp.json` for Cursor integration with Context7 MCP server.
- Structured project directories for better organization and clarity.

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,79 @@
-# dependencies (bun install)
+# Dependencies (Bun/Node.js)
 node_modules
+bun.lockb
+.pnp.*
 
-# output
+# Build outputs
 out
 dist
+build
 *.tgz
 
-# code coverage
+# Code coverage
 coverage
 *.lcov
 
-# logs
+# Logs
 logs
-_.log
-report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
+*.log
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+npm-debug.log*
+bun-debug.log*
 
-# dotenv environment variable files
+# Environment variables
 .env
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
 
-# caches
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Prisma
+/generated/prisma
+prisma/migrations/*.sql
+
+# Caches
 .eslintcache
 .cache
 *.tsbuildinfo
+.turbo
 
-# IntelliJ based IDEs
+# IDE files
 .idea
+.vscode/settings.json
+.vscode/launch.json
 
-# Finder (MacOS) folder config
+# OS generated files
 .DS_Store
-.cursor
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
-/generated/prisma
+# Cursor (keep mcp.json for project configuration)
+.cursor/logs
+.cursor/workspaceStorage
+.cursor/cache/
+.cursor/history/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Temporary files
+*.tmp
+*.temp
+*.swp
+*.swo
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
