--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -5,6 +5,9 @@ on:
   pull_request:
 
 jobs:
+  # Ce job effectue une vérification de linting sur le code typeScript du backend.
+  # Il s'assure que le code respecte les règles de style définies par ESLint.
+  # Ce job est utile pour maintenir la qualité du code et éviter les erreurs de syntaxe.
   backend-lint:
     runs-on: ubuntu-latest
     defaults:
@@ -38,6 +41,7 @@ jobs:
       - run: bun install
       - run: bun run start --dry-run
 
+  # Ce job configure un environnement pour exécuter les migrations Prisma sur le backend.
   prisma-migrate:
     runs-on: ubuntu-latest
     defaults:
@@ -61,7 +65,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bunx prisma generate
+      - run: bunx prisma generate --schema=./backend/prisma/schema.prisma
       - run: bunx prisma migrate deploy
 
 
