--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bun run start --dry-run
+      - name: Type-check & build
+        run: bun run build
 
   # Ce job configure un environnement pour exécuter les migrations Prisma sur le backend.
   prisma-migrate:
@@ -65,8 +66,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bunx prisma generate --schema=./backend/prisma/schema.prisma
-      - run: bunx prisma migrate deploy
+      - run: bunx prisma generate --schema=prisma/schema.prisma
+      - run: bunx prisma migrate deploy --schema=prisma/schema.prisma
 
 
   backoffice-test:
