--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -66,8 +66,8 @@ jobs:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v1
       - run: bun install
-      - run: bunx prisma generate --schema=prisma/schema.prisma
-      - run: bunx prisma migrate deploy --schema=prisma/schema.prisma
+      - run: bunx prisma generate --schema=prisma/app/schema.prisma
+      - run: bunx prisma migrate deploy --schema=prisma/app/schema.prisma
 
 
   backoffice-test:
