T-39 ci/cd: Update CI/CD pipeline to include `CASHOU_DB_URL` and enhance ESLint config with recommended rules

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,8 @@ jobs:
     defaults:
       run:
         working-directory: backend
+    env:
+      CASHOU_DB_URL: ${{ vars.CASHOU_DB_URL }}
     services:
       postgres:
         image: postgres:15-alpine
