--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.15.4",
+    "eslint": "^9.31.0",
     "prisma": "^6.11.1"
   },
   "peerDependencies": {
