--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
       - uses: oven-sh/setup-bun@v1
       - run: bun install
       - name: Code quality
-        run: bunx eslint backend src backoffice mobile --ext .ts,.tsx
+        run: bunx eslint . --ext .ts,.tsx
         continue-on-error: true
 
   backend-test:
