Update architecture documentation, modify Docker Compose to use .env file, and adjust Dockerfile to copy environment variables. Clean up README for clarity on .env setup.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,8 +39,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3000:3000"
-    environment:
-      - CASHOU_DB_URL=${CASHOU_DB_URL}
+    env_file:
+      - .env
     depends_on:
       db_cashou:
         condition: service_healthy
