--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "start:backoffice": "cd backoffice && bun run start",
     "install:all": "bun install && cd backend && bun install && cd ../backoffice && bun install",
     "clean": "rm -rf node_modules backend/node_modules backoffice/node_modules",
-    "generate": "cd backend && bunx prisma generate --schema=prisma/app/schema.prisma",
-    "migrate": "cd backend && bunx prisma migrate dev --schema=prisma/app/schema.prisma",
-    "migrate:deploy": "cd backend && bunx prisma migrate deploy --schema=prisma/app/schema.prisma",
-    "migrate:reset": "cd backend && bunx prisma migrate reset --schema=prisma/app/schema.prisma",
-    "studio": "cd backend && bunx prisma studio --schema=prisma/app/schema.prisma",
+    "generate": " bunx prisma generate --schema=backend/prisma/app/schema.prisma",
+    "migrate": " bunx prisma migrate dev --schema=backend/prisma/app/schema.prisma",
+    "migrate:deploy": " bunx prisma migrate deploy --schema=backend/prisma/app/schema.prisma",
+    "migrate:reset": "bunx prisma migrate reset --schema=backend/prisma/app/schema.prisma",
+    "studio": "bunx prisma studio --schema=backend/prisma/app/schema.prisma",
     "db:seed": "cd backend && bun run db:seed",
     "db:empty": "cd backend && bunx prisma migrate reset --force --schema=prisma/app/schema.prisma",
     "db:check": "cd backend && bunx prisma db pull --force --schema=prisma/app/schema.prisma",
@@ -34,11 +34,12 @@
     "docker:build": "docker-compose build",
     "docker:logs": "docker-compose logs -f",
     "docker:clean": "docker-compose down -v && docker system prune -f",
-    "setup": "bun run docker:up && bun run install:all && bun run generate && bun run migrate",
+    "setup": "bun run install:all && bun run docker:up && bun run generate && bun run migrate",
     "reset": "bun run docker:down && bun run docker:clean && bun run docker:up && bun run migrate:reset"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/node": "^24.0.14",
     "concurrently": "^8.2.2"
   },
   "peerDependencies": {
@@ -61,5 +62,8 @@
     "url": "git+https://github.com/your-org/cashou.git"
   },
   "author": "Cashou Team",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@trpc/server": "^11.4.3"
+  }
 }
