--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@prisma/client": "^6.11.1",
     "@trpc/server": "^11.4.3",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^4.0.5"
   }
 }
