T-36 fix: ajouter dotenv pour la commande studio dans package.json
Correction du problème d'écran blanc dans Prisma Studio en ajoutant
le chargement des variables d'environnement via dotenv depuis le
fichier .env racine au lieu de dépendre d'un fichier .env local

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "migrate": "bunx dotenv -e .env -- prisma migrate dev --schema=backend/prisma/app/schema.prisma",
     "migrate:deploy": "bunx dotenv -e .env -- prisma migrate deploy --schema=backend/prisma/app/schema.prisma",
     "migrate:reset": "bunx dotenv -e .env -- prisma migrate reset --schema=backend/prisma/app/schema.prisma",
-    "studio": "cd backend && bunx prisma studio --schema=prisma/app/schema.prisma",
+    "studio": "bunx dotenv -e .env -- prisma studio --schema=backend/prisma/app/schema.prisma",
     "db:seed": "cd backend && bun run db:seed",
     "db:empty": "cd backend && bunx prisma migrate reset --force --schema=prisma/app/schema.prisma",
     "db:check": "cd backend && bunx prisma db pull --force --schema=prisma/app/schema.prisma",
