--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -4,14 +4,36 @@
   "type": "module",
   "private": true,
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/node": "^24.0.15",
+    "@vitejs/plugin-react": "^4.7.0",
+    "vite": "^7.0.5"
   },
   "scripts": {
-    "dev": "bun --watch index.ts",
-    "build": "bun build ./index.ts --outdir=./dist --target=bun",
-    "start": "bun ./dist/index.js"
+    "dev": "dotenv -e ../.env -- vite",
+    "build": "dotenv -e ../.env -- vite build",
+    "preview": "dotenv -e ../.env -- vite preview",
+    "start": "dotenv -e ../.env -- vite preview"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.52.0",
+    "@trpc/client": "^11.4.3",
+    "@trpc/next": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
+    "@trpc/server": "^11.4.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "zod": "4.0.5",
+    "zustand": "^5.0.6"
   }
 }
