--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
     "reset": "bun run docker:down && bun run docker:clean && bun run docker:up && bun run migrate:reset"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@types/bun": "latest",
     "concurrently": "^8.2.2",
-    "dotenv-cli": "^4.0.0"
+    "dotenv-cli": "^4.0.0",
+    "tailwindcss": "^4.1.11"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -59,7 +61,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/your-org/cashou.git"
+    "url": "git+https://github.com/T-ESP-700/cashou.git"
   },
   "author": "Cashou Team",
   "license": "MIT"
