T-82: fix package.json bug, Update Dockerfiles, scripts, and configurations for improved hot reload and development setup

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,25 @@
-# backend/Dockerfile
 FROM oven/bun:1.0
 
 WORKDIR /app
 
-COPY package.json bun.lock ./
+# Copier les fichiers de configuration du monorepo
+COPY package.json bun.lock* ./
+COPY backend/package.json ./backend/package.json
+COPY backoffice/package.json ./backoffice/package.json
 
+# Installer toutes les dépendances (workspaces)
 RUN bun install
 
-COPY . .
+# Copier le code source du backend
+COPY backend/ ./backend/
 
-RUN bunx dotenv -e .env -- prisma generate --schema=prisma/app/schema.prisma
+# Se déplacer dans le backend
+WORKDIR /app/backend
+
+# Générer le client Prisma
+RUN bunx prisma generate --schema=prisma/app/schema.prisma
 
 EXPOSE 3000
 
-CMD ["bun", "run", "start"]
+# Utiliser le mode développement avec --watch
+CMD ["bun", "--watch", "--hot", "src/index.ts"]
