--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "docker:build": "docker-compose build",
     "docker:logs": "docker-compose logs -f",
     "docker:clean": "docker-compose down -v && docker system prune -f",
-    "setup": "bun run install:all && bun run docker:up && bun run generate && bun run migrate",
+    "setup": "bun run install:all && bun run docker:up && bun run generate && bun run migrate && bun run docker:logs",
     "reset": "bun run docker:down && bun run docker:clean && bun run docker:up && bun run migrate:reset"
   },
   "devDependencies": {
