--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     volumes:
       - cashou-db-data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 10s
       retries: 10
@@ -20,41 +20,59 @@ services:
     environment:
       POSTGRES_USER: "${POSTGRES_USER}"
       POSTGRES_PASSWORD: "${POSTGRES_PASSWORD}"
-      POSTGRES_DB: backoffice
+      POSTGRES_DB: "backoffice"
     ports:
-      - "5433:5433"
+      - "5433:5432"
     volumes:
       - backoffice-db-data:/var/lib/postgresql/data
     healthcheck:
-      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER}"]
       interval: 10s
       timeout: 10s
       retries: 10
 
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./backend/Dockerfile
     ports:
       - "3000:3000"
     environment:
       - DOCKER_CONTAINER=true
+      - NODE_ENV=development  # indique qu'on est en mode développement, pour activer des fonctionnalités de debug.
+      - FORCE_COLOR=1 # pour forcer l'affichage des couleurs dans les logs
     env_file:
       - .env
     depends_on:
       db_cashou:
         condition: service_healthy
     volumes:
-      - ./backend:/app
+      # Hot reload : quand le code est localement modifié,
+      # les changements sont immédiatement reflétés dans le conteneur sans rebuild.
+      - ./backend/src:/app/backend/src:cached
+      - ./backend/src:/app/backend/src:cached
+      - ./backend/scripts:/app/backend/scripts:cached
+      # Évite d'écraser node_modules dans le conteneur
       - /app/node_modules
+      - /app/backend/node_modules
+    # Améliorer les performances de synchronisation
+    develop:
+      watch:
+        - action: sync
+          path: ./backend/src
+          target: /app/backend/src
+        - action: sync
+          path: ./backend/prisma
+          target: /app/backend/prisma
 
   backoffice:
     build:
-      context: ./backoffice
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: ./backoffice/Dockerfile
     ports:
       - "5173:5173"
     environment:
+      - NODE_ENV=development
       - BACKOFFICE_DB_URL=${BACKOFFICE_DB_URL}
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
@@ -62,7 +80,21 @@ services:
       db_backoffice:
         condition: service_healthy
     volumes:
-      - ./backoffice/src:/app/src
+      # Hot reload : quand le code est localement modifié,
+      # les changements sont immédiatement reflétés dans le conteneur sans rebuild.
+      - ./backoffice/src:/app/backoffice/src:cached
+      - ./backoffice:/app/backoffice:cached
+      # Éviter d'écraser node_modules
+      - /app/node_modules
+      - /app/backoffice/node_modules
+    develop:
+      watch:
+        - action: sync
+          path: ./backoffice
+          target: /app/backoffice
+          ignore:
+            - node_modules/
+
 
 volumes:
   cashou-db-data:
